--- a/googleads/src/main/res/values/strings.xml
+++ b/googleads/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">google ads</string>
+    <string name="app_name">Google ads</string>
     <string name="hello_world">Hello, World!</string>
 
     <string name="action_settings">Settings</string>
